# libpkgaudit

./: COPYRIGHT  README.md  meson.build
include/libpkgaudit/: auditor.h  ownership_index.h  probe.h  types.h
man/: libpkgaudit.3.scdoc  meson.build  pkgaudit_auditor.3.scdoc  pkgaudit_ownership_index.3.scdoc  pkgaudit_probe.3.scdoc  pkgaudit_types.3.scdoc
src/: auditor.cpp  meson.build  ownership_index.cpp  serial_probe_engine.cpp
